--- a/Model notebook3.ipynb
+++ b/Model notebook3.ipynb
@@ -613,7 +613,7 @@
     }
    ],
    "source": [
-    "# Drop the non-beneficial ID columns.\n",
+    "# Drop the non-beneficial columns.\n",
     "beer_df.drop(['brewery_id', 'brewery_name', 'review_time', 'review_profilename', 'beer_style', 'beer_name', 'beer_beerid'], axis=1, inplace=True)\n",
     "beer_df.head(10)\n"
    ]
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
        "(1138858, 5)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,21 +914,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Creating the decision tree classifier instance\n",
     "# Define model\n",
     "model = BalancedRandomForestClassifier(n_estimators=100, random_state=1)\n",
-    "\n",
+    "# model = BalancedRandomForestClassifier(n_estimators=100, random_state=1)\n",
     "# Fitting the model\n",
     "model = model.fit(X_train_scaled, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +937,7 @@
        "0.8680417259364628"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1004,7 @@
        "Actual 3 or under                   41056                271442"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1013,8 @@
     "# Display the confusion matrix\n",
     "cm = confusion_matrix(y_test, predictions)\n",
     "cm_df = pd.DataFrame(\n",
-    "    cm, index=[\"Actual 3.5 or over\", \"Actual 3 or under\"], columns=[\"Predicted 3.5 or over\", \"Predicted 3 or under\"]\n",
+    "    cm, index=[\"Actual 3.5 or over\", \"Actual 3 or under\"], \n",
+    "    columns=[\"Predicted 3.5 or over\", \"Predicted 3 or under\"]\n",
     ")\n",
     "\n",
     "cm_df"
@@ -1021,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1060,7 @@
        " (0.04584200194173326, 'review_appearance')]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1091,7 @@
        "(1138858, 5)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1223,7 @@
        "Actual 3 or under                   13536                299026"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,7 +1233,8 @@
     "from sklearn.metrics import confusion_matrix\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "cm_df = pd.DataFrame(\n",
-    "    cm, index=[\"Actual 3.5 or over\", \"Actual 3 or under\"], columns=[\"Predicted 3.5 or over\", \"Predicted 3 or under\"]\n",
+    "    cm, index=[\"Actual 3.5 or over\", \"Actual 3 or under\"], \n",
+    "    columns=[\"Predicted 3.5 or over\", \"Predicted 3 or under\"]\n",
     ")\n",
     "\n",
     "cm_df"
@@ -1240,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1255,7 @@
        " (0.03997034281945378, 'review_appearance')]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
