updated logistic regression model with stratify

--- a/Logistic regression model with SMOTEENN.ipynb
+++ b/Logistic regression model with SMOTEENN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5e3b410b",
+   "id": "087bfdae",
    "metadata": {},
    "source": [
     "## Preprocessing Data"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8629ce22",
+   "id": "235d34cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ef5e8563",
+   "id": "88bd5233",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f42aa09f",
+   "id": "d5d8d407",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "993a6f33",
+   "id": "e324f37b",
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "eb50e051",
+   "id": "c22f107b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "93b58f1d",
+   "id": "bf15207e",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8fd85525",
+   "id": "2ce51da6",
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "504a362f",
+   "id": "21057895",
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0f821068",
+   "id": "ae5a196a",
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bd38350e",
+   "id": "573e502b",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7ca9ffad",
+   "id": "e32d4008",
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ebe50838",
+   "id": "69828fe8",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1234b3ba",
+   "id": "e3492712",
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0b24737",
+   "id": "f137dda5",
    "metadata": {},
    "source": [
     "## Create and Test Model 1 - Logistic Regression"
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "de312ddb",
+   "id": "07049dc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,13 +884,13 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "91398faf",
+   "id": "36d74e9b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({0.0: 201407, 1.0: 937451})"
+       "Counter({1.0: 937493, 0.0: 201365})"
       ]
      },
      "execution_count": 15,
@@ -900,13 +900,13 @@
    ],
    "source": [
     "# Split the dataset into train and test sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1, stratify=y)\n",
     "Counter(y_train)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "487538d9",
+   "id": "bc5be0bc",
    "metadata": {},
    "source": [
     "### Our data is unbalanced. 17% from minority class"
@@ -915,13 +915,13 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "dd83da98",
+   "id": "019dabec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({0.0: 638062, 1.0: 1050192})"
+       "Counter({0.0: 473568, 1.0: 777888})"
       ]
      },
      "execution_count": 16,
@@ -932,14 +932,14 @@
    "source": [
     "# Resample using combination over and under sampling with SMOTEENN\n",
     "smote_enn = SMOTEENN(random_state=0)\n",
-    "X_resampled, y_resampled = smote_enn.fit_resample(X, y)\n",
+    "X_resampled, y_resampled = smote_enn.fit_resample(X_train, y_train)\n",
     "Counter(y_resampled)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "48de270b",
+   "id": "1e4a01d2",
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "106f4fb4",
+   "id": "651d0228",
    "metadata": {},
    "outputs": [
     {
@@ -993,13 +993,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Actual 3 or under</th>\n",
-       "      <td>53581</td>\n",
-       "      <td>13499</td>\n",
+       "      <td>53810</td>\n",
+       "      <td>13312</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual 3.5 or over</th>\n",
-       "      <td>24339</td>\n",
-       "      <td>288201</td>\n",
+       "      <td>25038</td>\n",
+       "      <td>287460</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1007,8 +1007,8 @@
       ],
       "text/plain": [
        "                    Predicted 3 or under  Predicted 3.5 or over\n",
-       "Actual 3 or under                  53581                  13499\n",
-       "Actual 3.5 or over                 24339                 288201"
+       "Actual 3 or under                  53810                  13312\n",
+       "Actual 3.5 or over                 25038                 287460"
       ]
      },
      "execution_count": 18,
@@ -1032,13 +1032,13 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a6167bce",
+   "id": "76243b5d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8604439197077944"
+       "0.860776224977494"
       ]
      },
      "execution_count": 19,
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "511236c3",
+   "id": "12c19b23",
    "metadata": {},
    "outputs": [
     {
@@ -1063,8 +1063,8 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "        0.0       0.69      0.80      0.92      0.74      0.86      0.73     67080\n",
-      "        1.0       0.96      0.92      0.80      0.94      0.86      0.75    312540\n",
+      "        0.0       0.68      0.80      0.92      0.74      0.86      0.73     67122\n",
+      "        1.0       0.96      0.92      0.80      0.94      0.86      0.75    312498\n",
       "\n",
       "avg / total       0.91      0.90      0.82      0.90      0.86      0.74    379620\n",
       "\n"
@@ -1079,7 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2884ae61",
+   "id": "997f45fb",
    "metadata": {},
    "outputs": [],
    "source": []
